--- a/psychological-treatment-analysis-with-qnn.ipynb
+++ b/psychological-treatment-analysis-with-qnn.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8246c1ff",
+   "id": "3e63e61e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc6c7fbf",
+   "id": "a5105fd6",
    "metadata": {},
    "source": [
     "# Create the data"
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c7064b03",
+   "id": "b91e41a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "03e877df",
+   "id": "fcfecdff",
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1cc16d03",
+   "id": "eb565019",
    "metadata": {},
    "outputs": [
     {
@@ -225,76 +225,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "1089c751",
+   "execution_count": 57,
+   "id": "cab01af2",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1mTotal empty values in the Dataset :\u001b[0m 0\n"
+      "Total empty values in the Dataset : 0\n"
      ]
     }
    ],
    "source": [
-    "print('\\033[1m' + 'Total empty values in the Dataset :' + '\\033[0m' , df_selected.isnull().sum().sum())"
+    "print('Total empty values in the Dataset :', df_selected.isnull().sum().sum())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "16bea91f",
+   "execution_count": 58,
+   "id": "56304fb7",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1mUnique values in Age :\u001b[0m 53\n",
-      "\u001b[1mUnique values in Gender :\u001b[0m 49\n",
-      "\u001b[1mUnique values in treatment :\u001b[0m 2\n"
+      "Unique values in Age : 45\n",
+      "Unique values in Gender : 3\n",
+      "Unique values in treatment : 2\n"
      ]
     }
    ],
    "source": [
     "    for col in df_selected.columns:\n",
-    "        print('\\033[1m' + 'Unique values in {} :'.format(col) + '\\033[0m',len(df_selected[col].unique()))"
+    "        print('Unique values in {} :'.format(col),len(df_selected[col].unique()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "4ccc00e3",
+   "execution_count": 59,
+   "id": "5aaec6eb",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1mUnique values in updated Gender column :\u001b[0m ['Female' 'M' 'Male' 'male' 'female' 'm' 'Male-ish' 'maile' 'Trans-female'\n",
-      " 'Cis Female' 'F' 'something kinda male?' 'Cis Male' 'Woman' 'f' 'Mal'\n",
-      " 'Male (CIS)' 'queer/she/they' 'non-binary' 'Femake' 'woman' 'Make' 'Nah'\n",
-      " 'All' 'Enby' 'fluid' 'Genderqueer' 'Female ' 'Androgyne' 'Agender'\n",
-      " 'cis-female/femme' 'Guy (-ish) ^_^' 'male leaning androgynous' 'Male '\n",
-      " 'Man' 'Trans woman' 'msle' 'Neuter' 'Female (trans)' 'queer'\n",
-      " 'Female (cis)' 'Mail' 'cis male' 'A little about you' 'Malr' 'p' 'femail'\n",
-      " 'Cis Man' 'ostensibly male, unsure what that really means']\n",
-      "\u001b[1mRange of column Age :\u001b[0m (-1726, 99999999999)\n",
-      "\u001b[1mUnique values in treatment column :\u001b[0m ['Yes' 'No']\n"
+      "Unique values in updated Gender column : [2 1 3]\n",
+      "Range of column Age : (18, 72)\n",
+      "Unique values in treatment column : [1 0]\n"
      ]
     }
    ],
    "source": [
-    "print('\\033[1m' + 'Unique values in updated Gender column :' + '\\033[0m', df_selected.Gender.unique())\n",
-    "print('\\033[1m' + 'Range of column Age :' + '\\033[0m', (df_selected.Age.min(), df_selected.Age.max()))\n",
-    "print('\\033[1m' + 'Unique values in treatment column :' + '\\033[0m', df_selected.treatment.unique())"
+    "print('Unique values in updated Gender column :', df_selected.Gender.unique())\n",
+    "print('Range of column Age :', (df_selected.Age.min(), df_selected.Age.max()))\n",
+    "print('Unique values in treatment column :', df_selected.treatment.unique())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "258f1eec",
+   "id": "4c1b1276",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,51 +315,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "50599945",
+   "execution_count": 63,
+   "id": "f8b58b8a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1mUnique values in updated Gender column :\u001b[0m [2 1 3]\n",
-      "\u001b[1mAge range:\u001b[0m (18, 72)\n",
-      "\u001b[1mUnique values in updated treatment column :\u001b[0m [1 0]\n"
+      "Unique values in updated Gender column : [2 1 3]\n",
+      "Age range: (18, 72)\n",
+      "Unique values in updated treatment column : [1 0]\n"
      ]
     }
    ],
    "source": [
-    "print('\\033[1m' + 'Unique values in updated Gender column :' + '\\033[0m', df_selected.Gender.unique())\n",
-    "print('\\033[1m' + 'Age range:' + '\\033[0m', (df_selected.Age.min(), df_selected.Age.max()))\n",
-    "print('\\033[1m' + 'Unique values in updated treatment column :' + '\\033[0m', df_selected.treatment.unique())"
+    "print('Unique values in updated Gender column :', df_selected.Gender.unique())\n",
+    "print('Age range:', (df_selected.Age.min(), df_selected.Age.max()))\n",
+    "print('Unique values in updated treatment column :', df_selected.treatment.unique())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "815f5378",
+   "execution_count": 62,
+   "id": "5529b501",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1mNumber of unique values in Age :\u001b[0m 45\n",
-      "\u001b[1mNumber of unique values in Gender :\u001b[0m 3\n",
-      "\u001b[1mNumber of unique values in treatment :\u001b[0m 2\n"
+      "Number of unique values in Age : 45\n",
+      "Number of unique values in Gender : 3\n",
+      "Number of unique values in treatment : 2\n"
      ]
     }
    ],
    "source": [
     "for col in df_selected.columns:\n",
-    "    print('\\033[1m' + 'Number of unique values in {} :'.format(col) + '\\033[0m',len(df_selected[col].unique()))"
+    "    print('Number of unique values in {} :'.format(col),len(df_selected[col].unique()))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "fb570b4e",
+   "id": "472182a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "471e41d8",
+   "id": "b9a9b6ce",
    "metadata": {},
    "source": [
     "# Data embedding circuits"
@@ -389,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "452552dd",
+   "id": "eab15f94",
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "5f02ab1f",
+   "id": "4de0e1ed",
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a00167ec",
+   "id": "a79ce042",
    "metadata": {},
    "source": [
     "# Anstaz"
@@ -446,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "f410a072",
+   "id": "831a641c",
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "d9527e1c",
+   "id": "f917ba56",
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e8f6c31",
+   "id": "a124d4fd",
    "metadata": {},
    "source": [
     "# Quantum Neural Network"
@@ -503,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b5e8ff4",
+   "id": "272d3909",
    "metadata": {},
    "source": [
     "## CircuitQNN"
@@ -512,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "157c80d0",
+   "id": "7855eb97",
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "b213d479",
+   "id": "44d8c481",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "9a8c9e96",
+   "id": "55f57d45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "4603dfb1",
+   "id": "a698f662",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +571,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "694331d5",
+   "id": "9c8491da",
    "metadata": {},
    "source": [
     "### Forward pass"
@@ -587,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "f352570b",
+   "id": "7dc07b61",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +610,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61630684",
+   "id": "518a940e",
    "metadata": {},
    "source": [
     "### Backward pass"
@@ -626,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "2a8c2bdd",
+   "id": "1c13f085",
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +648,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf2bd744",
+   "id": "57e3e196",
    "metadata": {},
    "source": [
     "## OpflowQNN"
@@ -664,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "7194ce50",
+   "id": "92310ef1",
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "673a8594",
+   "id": "39658510",
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "bba22c1e",
+   "id": "9ff3c2ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,7 +718,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4ef5546",
+   "id": "e44834e3",
    "metadata": {},
    "source": [
     "### Forward pass"
@@ -734,7 +727,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "9b7cf164",
+   "id": "94083560",
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +756,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be17e5b2",
+   "id": "520ce869",
    "metadata": {},
    "source": [
     "### Backward pass"
@@ -772,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "8cbc2b8d",
+   "id": "6a5731c4",
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +796,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14babc7f",
+   "id": "00edebe9",
    "metadata": {},
    "source": [
     "# Train a Neural Network Classifier with CircuitQNN"
@@ -812,7 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "302e2a35",
+   "id": "252606fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,7 +822,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "3f6d025e",
+   "id": "cc3be0dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "ead18252",
+   "id": "29c84da8",
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +925,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "6c6af53e",
+   "id": "3ac4053f",
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "2cfdb49a",
+   "id": "059341a7",
    "metadata": {},
    "outputs": [
     {
@@ -986,7 +979,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27cca4cd",
+   "id": "c06e9058",
    "metadata": {},
    "source": [
     "# Train a Neural Network Classifier with OpflowQNN and Gradient Descent"
@@ -995,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "17bd65d6",
+   "id": "12fd3e89",
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +1011,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "850591a3",
+   "id": "537e4b7a",
    "metadata": {},
    "outputs": [
     {
@@ -1055,7 +1048,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "d2a98ad5",
+   "id": "bb951162",
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "846f7ccb",
+   "id": "63d0b39b",
    "metadata": {},
    "outputs": [
     {
@@ -1110,7 +1103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab66cfb5",
+   "id": "b2b56dec",
    "metadata": {},
    "outputs": [],
    "source": []
